fix: style general (dark mode)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,4 +167,5 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #043d75;
+    min-height: 100vh;
 }
